--- a/configs/helix/languages.toml
+++ b/configs/helix/languages.toml
@@ -20,3 +20,11 @@ indent = { tab-width = 4, unit = "    " }
 [[language]]
 name = "markdown"
 file-types = ["MD", "md", "livemd", "markdown", "mdx", "mkd", "mkdn", "mdwn", "mdown", "markdn", "mdtxt", "mdtext", "workbook", { glob = "PULLREQ_EDITMSG" }]
+
+[[language]]
+name = "typescript"
+indent = { tab-width = 4, unit = " " }
+
+[[language]]
+name = "tsx"
+indent = { tab-width = 4, unit = " " }
